# jitcatch

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
docs/: 01-pre-commit-check.md  02-working-tree-check.md  03-last-commit-smoke-test.md  04-pr-review.md  05-single-file-review.md  06-offline-stub-mode.md  07-local-ollama.md  08-anthropic-claude.md  09-openai-compatible-providers.md  10-per-stage-model-routing.md  11-agentic-reviewer.md  12-feedback-retry-loop.md  13-ci-integration.md  14-javascript-projects.md  15-explain-candidate.md  README.md
jitcatch/: cache.py  cli.py  config.py  context.py  diff.py  llm.py  report.py  revs.py  runner.py
jitcatch/adapters/: __init__.py  base.py  javascript.py  python.py
jitcatch/assessor/: __init__.py  judge.py  rules.py
jitcatch/workflows/: __init__.py  dodgy_diff.py  intent_aware.py  retry.py  reviewer.py
tests/: test_cache.py  test_context.py  test_explain.py  test_html_report.py  test_llm_parse.py  test_pr_mode.py  test_provider_dispatch.py  test_reviewer_retry.py  test_revs.py  test_rules.py  test_smoke.py
