[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jitcatch"
version = "0.1.0"
description = "Just-in-Time Catching Test Generation (MVP inspired by Meta FSE 2026 paper)"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
jitcatch = "jitcatch.cli:main"

[tool.setuptools.packages.find]
include = ["jitcatch*"]
exclude = ["tests*"]
